Fix: Spacing on Cover's introduction

--- a/src/styles/Cover.scss
+++ b/src/styles/Cover.scss
@@ -61,7 +61,8 @@
   .cover-header {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
+    
     border-bottom: dotted 1px;
   }
 
